--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "start": "serve /dist",
+    "start": "serve dist",
     "build": "node build/build.js",
     "lint": "eslint --ext .js,.vue src"
   },
